# libguile-math

./: .gitignore  .travis.yml  Dockerfile  Makefile  Makefile.am  NOTES  README  chop.c  chop.h  chop.scm  configure.ac  main.scm  ryu.texi
doc/: mlg_lib.texi
mlg/: Makefile  assert.scm  buf.scm  bytevectors.scm  characters.scm  chars.c  containers.scm  ed.scm  io.scm  journal.c  journal.scm  lists.scm  logging.scm  logging.txt  math.c  math.h  math.scm  numval.scm  port.scm  procedure.scm  query_color.sh  re.scm  spreadsheet.scm  state.scm  strings.c  strings.h  strings.scm  time.scm  typechecking.scm  unidata_to_numval.pl  utils.c  utils.h  utils.scm
mlg/ed/: address.scm  bmark.scm  bookmark.scm  filename.scm  ops.scm  regex.scm  repl.scm  suffix.scm
module/mlg/: assert.scm  bytevectors.scm  characters.scm  debug.scm  journal.scm  lists.scm  logging.scm  logging.txt  math.scm  port.scm  procedure.scm  regex.scm  spreadsheet.scm  strings.scm  utils.scm
module/ryu/: core.scm  cpp.m4
ryu/: core.scm  printf.scm
src/: chars.c  config.h.in  journal.c  journal.h  utils.c
tests/: argv  argv.c  argv.scm  math-test.scm  t-lists.scm  t-math.scm  t-mlg-bytevectors.scm  t-mlg-characters.scm  t-mlg-lists.scm  t-mlg-math.scm  t-mlg-ports.scm  t-mlg-strings.scm
